src/parser/GrammarParser.java
// Generated from java-escape by ANTLR 4.11.1
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, INT_LITERAL=40, REAL_LITERAL=41, CHAR_LITERAL=42, IDENT=43, 
		LINE_COMMENT=44, MULTILINE_COMMENT=45, WHITESPACE=46;
	public static final int
		RULE_program = 0, RULE_definitions = 1, RULE_definition = 2, RULE_attrDefinitions = 3, 
		RULE_attrDefinition = 4, RULE_params = 5, RULE_param = 6, RULE_varDefinitions = 7, 
		RULE_varDefinition = 8, RULE_statements = 9, RULE_statement = 10, RULE_expressions = 11, 
		RULE_expression = 12, RULE_type = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definitions", "definition", "attrDefinitions", "attrDefinition", 
			"params", "param", "varDefinitions", "varDefinition", "statements", "statement", 
			"expressions", "expression", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'struct'", "'{'", "'}'", "'('", "')'", "':'", "';'", "','", "'var'", 
			"'read'", "'print'", "'println'", "'printsp'", "'return'", "'='", "'while'", 
			"'if'", "'else'", "'['", "']'", "'.'", "'!'", "'*'", "'/'", "'%'", "'+'", 
			"'-'", "'>='", "'<='", "'>'", "'<'", "'=='", "'!='", "'&&'", "'||'", 
			"'int'", "'float'", "'char'", "'void'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "INT_LITERAL", "REAL_LITERAL", "CHAR_LITERAL", 
			"IDENT", "LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public DefinitionsContext definitions;
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			((ProgramContext)_localctx).definitions = definitions();
			setState(29);
			match(EOF);
			 ((ProgramContext)_localctx).ast =  new Program(((ProgramContext)_localctx).definitions.list); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionsContext extends ParserRuleContext {
		public List<Definition> list = new ArrayList<Definition>();
		public DefinitionContext definition;
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 8796093022722L) != 0) {
				{
				{
				setState(32);
				((DefinitionsContext)_localctx).definition = definition();
				 _localctx.list.add(((DefinitionsContext)_localctx).definition.ast); 
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public Definition ast;
		public VarDefinitionContext varDefinition;
		public Token IDENT;
		public AttrDefinitionsContext attrDefinitions;
		public ParamsContext params;
		public TypeContext type;
		public VarDefinitionsContext varDefinitions;
		public StatementsContext statements;
		public VarDefinitionContext varDefinition() {
			return getRuleContext(VarDefinitionContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public AttrDefinitionsContext attrDefinitions() {
			return getRuleContext(AttrDefinitionsContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public VarDefinitionsContext varDefinitions() {
			return getRuleContext(VarDefinitionsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition);
		int _la;
		try {
			setState(64);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				((DefinitionContext)_localctx).varDefinition = varDefinition();
				 ((DefinitionContext)_localctx).ast =  ((DefinitionContext)_localctx).varDefinition.ast; 
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				match(T__0);
				setState(44);
				((DefinitionContext)_localctx).IDENT = match(IDENT);
				setState(45);
				match(T__1);
				setState(46);
				((DefinitionContext)_localctx).attrDefinitions = attrDefinitions();
				setState(47);
				match(T__2);
				 ((DefinitionContext)_localctx).ast =  new StructDefinition(((DefinitionContext)_localctx).IDENT, ((DefinitionContext)_localctx).attrDefinitions.list); 
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(50);
				((DefinitionContext)_localctx).IDENT = match(IDENT);
				setState(51);
				match(T__3);
				setState(52);
				((DefinitionContext)_localctx).params = params();
				setState(53);
				match(T__4);
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(54);
					match(T__5);
					setState(55);
					((DefinitionContext)_localctx).type = type();
					}
				}

				setState(58);
				match(T__1);
				setState(59);
				((DefinitionContext)_localctx).varDefinitions = varDefinitions();
				setState(60);
				((DefinitionContext)_localctx).statements = statements();
				setState(61);
				match(T__2);
				 ((DefinitionContext)_localctx).ast =  new FunctionDefinition(((DefinitionContext)_localctx).IDENT, ((DefinitionContext)_localctx).params.list, ((DefinitionContext)_localctx).type != null ? ((DefinitionContext)_localctx).type.ast : null, ((DefinitionContext)_localctx).varDefinitions.list, ((DefinitionContext)_localctx).statements.list); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttrDefinitionsContext extends ParserRuleContext {
		public List<AttrDefinition> list = new ArrayList<AttrDefinition>();
		public AttrDefinitionContext attrDefinition;
		public List<AttrDefinitionContext> attrDefinition() {
			return getRuleContexts(AttrDefinitionContext.class);
		}
		public AttrDefinitionContext attrDefinition(int i) {
			return getRuleContext(AttrDefinitionContext.class,i);
		}
		public AttrDefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attrDefinitions; }
	}

	public final AttrDefinitionsContext attrDefinitions() throws RecognitionException {
		AttrDefinitionsContext _localctx = new AttrDefinitionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attrDefinitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(66);
				((AttrDefinitionsContext)_localctx).attrDefinition = attrDefinition();
				 _localctx.list.add(((AttrDefinitionsContext)_localctx).attrDefinition.ast); 
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttrDefinitionContext extends ParserRuleContext {
		public AttrDefinition ast;
		public Token IDENT;
		public TypeContext type;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public AttrDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attrDefinition; }
	}

	public final AttrDefinitionContext attrDefinition() throws RecognitionException {
		AttrDefinitionContext _localctx = new AttrDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_attrDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			((AttrDefinitionContext)_localctx).IDENT = match(IDENT);
			setState(75);
			match(T__5);
			setState(76);
			((AttrDefinitionContext)_localctx).type = type();
			setState(77);
			match(T__6);
			 ((AttrDefinitionContext)_localctx).ast =  new AttrDefinition(((AttrDefinitionContext)_localctx).IDENT, ((AttrDefinitionContext)_localctx).type.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public List<VarDefinition> list = new ArrayList<VarDefinition>();
		public ParamContext param;
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(80);
				((ParamsContext)_localctx).param = param();
				 _localctx.list.add(((ParamsContext)_localctx).param.ast); 
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(82);
					match(T__7);
					setState(83);
					((ParamsContext)_localctx).param = param();
					 _localctx.list.add(((ParamsContext)_localctx).param.ast); 
					}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public VarDefinition ast;
		public Token IDENT;
		public TypeContext type;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			((ParamContext)_localctx).IDENT = match(IDENT);
			setState(94);
			match(T__5);
			setState(95);
			((ParamContext)_localctx).type = type();
			 ((ParamContext)_localctx).ast =  new VarDefinition(((ParamContext)_localctx).IDENT, ((ParamContext)_localctx).type.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDefinitionsContext extends ParserRuleContext {
		public List<VarDefinition> list = new ArrayList<VarDefinition>();
		public VarDefinitionContext varDefinition;
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public VarDefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefinitions; }
	}

	public final VarDefinitionsContext varDefinitions() throws RecognitionException {
		VarDefinitionsContext _localctx = new VarDefinitionsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varDefinitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(98);
				((VarDefinitionsContext)_localctx).varDefinition = varDefinition();
				 _localctx.list.add(((VarDefinitionsContext)_localctx).varDefinition.ast); 
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDefinitionContext extends ParserRuleContext {
		public VarDefinition ast;
		public Token IDENT;
		public TypeContext type;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefinition; }
	}

	public final VarDefinitionContext varDefinition() throws RecognitionException {
		VarDefinitionContext _localctx = new VarDefinitionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_varDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__8);
			setState(107);
			((VarDefinitionContext)_localctx).IDENT = match(IDENT);
			setState(108);
			match(T__5);
			setState(109);
			((VarDefinitionContext)_localctx).type = type();
			setState(110);
			match(T__6);
			 ((VarDefinitionContext)_localctx).ast =  new VarDefinition(((VarDefinitionContext)_localctx).IDENT, ((VarDefinitionContext)_localctx).type.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementsContext extends ParserRuleContext {
		public List<Statement> list = new ArrayList<Statement>();
		public StatementContext statement;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 16494826322960L) != 0) {
				{
				{
				setState(113);
				((StatementsContext)_localctx).statement = statement();
				 _localctx.list.add(((StatementsContext)_localctx).statement.ast); 
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Statement ast;
		public ExpressionContext expression;
		public ExpressionsContext expressions;
		public Token IDENT;
		public ExpressionContext left;
		public ExpressionContext right;
		public StatementsContext statements;
		public ExpressionContext cond;
		public StatementsContext tr;
		public StatementsContext fs;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_statement);
		int _la;
		try {
			setState(187);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(T__9);
				setState(122);
				((StatementContext)_localctx).expression = expression(0);
				setState(123);
				match(T__6);
				 ((StatementContext)_localctx).ast =  new Read(((StatementContext)_localctx).expression.ast); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				match(T__10);
				setState(127);
				((StatementContext)_localctx).expressions = expressions();
				setState(128);
				match(T__6);
				 ((StatementContext)_localctx).ast =  new Print(((StatementContext)_localctx).expressions.list); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				match(T__11);
				setState(132);
				((StatementContext)_localctx).expressions = expressions();
				setState(133);
				match(T__6);
				 ((StatementContext)_localctx).ast =  new Println(((StatementContext)_localctx).expressions.list); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				match(T__12);
				setState(137);
				((StatementContext)_localctx).expressions = expressions();
				setState(138);
				match(T__6);
				 ((StatementContext)_localctx).ast =  new Printsp(((StatementContext)_localctx).expressions.list); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(141);
				match(T__13);
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((_la) & ~0x3f) == 0 && ((1L << _la) & 16494826094608L) != 0) {
					{
					setState(142);
					((StatementContext)_localctx).expression = expression(0);
					}
				}

				setState(145);
				match(T__6);
				 ((StatementContext)_localctx).ast =  new Return(((StatementContext)_localctx).expression != null ? ((StatementContext)_localctx).expression.ast : null); _localctx.ast.updatePositions(_localctx.start); 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(147);
				((StatementContext)_localctx).IDENT = match(IDENT);
				setState(148);
				match(T__3);
				setState(149);
				((StatementContext)_localctx).expressions = expressions();
				setState(150);
				match(T__4);
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__6) {
					{
					setState(151);
					match(T__6);
					}
				}

				 ((StatementContext)_localctx).ast =  new FunctionCallStatement(((StatementContext)_localctx).IDENT, ((StatementContext)_localctx).expressions.list); 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(156);
				((StatementContext)_localctx).left = expression(0);
				setState(157);
				match(T__14);
				setState(158);
				((StatementContext)_localctx).right = expression(0);
				setState(159);
				match(T__6);
				 ((StatementContext)_localctx).ast =  new Assignment(((StatementContext)_localctx).left.ast, ((StatementContext)_localctx).right.ast); 
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(162);
				match(T__15);
				setState(163);
				match(T__3);
				setState(164);
				((StatementContext)_localctx).expression = expression(0);
				setState(165);
				match(T__4);
				setState(166);
				match(T__1);
				setState(167);
				((StatementContext)_localctx).statements = statements();
				setState(168);
				match(T__2);
				 ((StatementContext)_localctx).ast =  new While(((StatementContext)_localctx).expression.ast, ((StatementContext)_localctx).statements.list); 
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(171);
				match(T__16);
				setState(172);
				match(T__3);
				setState(173);
				((StatementContext)_localctx).cond = expression(0);
				setState(174);
				match(T__4);
				setState(175);
				match(T__1);
				setState(176);
				((StatementContext)_localctx).tr = statements();
				setState(177);
				match(T__2);
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__17) {
					{
					setState(178);
					match(T__17);
					setState(179);
					match(T__1);
					setState(180);
					((StatementContext)_localctx).fs = statements();
					setState(181);
					match(T__2);
					}
				}

				 ((StatementContext)_localctx).ast =  new Ifelse(((StatementContext)_localctx).cond.ast, ((StatementContext)_localctx).tr.list, ((StatementContext)_localctx).fs != null ? ((StatementContext)_localctx).fs.list : null); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionsContext extends ParserRuleContext {
		public List<Expression> list = new ArrayList<Expression>();
		public ExpressionContext expression;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ExpressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressions; }
	}

	public final ExpressionsContext expressions() throws RecognitionException {
		ExpressionsContext _localctx = new ExpressionsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expressions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((_la) & ~0x3f) == 0 && ((1L << _la) & 16494826094608L) != 0) {
				{
				setState(189);
				((ExpressionsContext)_localctx).expression = expression(0);
				 _localctx.list.add(((ExpressionsContext)_localctx).expression.ast); 
				setState(197);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(191);
					match(T__7);
					setState(192);
					((ExpressionsContext)_localctx).expression = expression(0);
					 _localctx.list.add(((ExpressionsContext)_localctx).expression.ast); 
					}
					}
					setState(199);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
